# oxenstored

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Makefile  README.md  configure  configure.ml  dune  dune-project  oxenstored.opam  xenstored.ml
.github/workflows/: format.yml  main.yml
.github/workflows/setup-env/: action.yml
gnt/: dune  gnt.ml  gnt.mli  gnttab_stubs.c
lib/: eventchn.ml  eventchn_stubs.c
mmap/: dune  mmap_stubs.h  xenmmap.ml  xenmmap.mli  xenmmap_stubs.c
ocaml-evtchn/: dune-project  xen-evtchn-unix-minimal.opam  xen-evtchn.opam
ocaml-evtchn/lib/: dune  eventchn.mli  eventchn_stubs.c  unix_activations.ml  unix_activations_minimal.ml
ocaml-evtchn/lib_test/: dune
oxenstored/: config.ml  configure  configure.ml  connection.ml  connections.ml  define.ml  disk.ml  domain.ml  domains.ml  dune  event.ml  history.ml  logging.ml  packet.ml  parse_arg.ml  perms.ml  poll.ml  poll.mli  process.ml  quota.ml  select_stubs.c  stdext.ml  store.ml  symbol.ml  symbol.mli  syslog.ml  syslog.mli  syslog_stubs.c  transaction.ml  trie.ml  trie.mli  utils.ml  xenstored.ml  xenstored_main.ml
oxenstored/systemd/: dune  systemd.ml  systemd.mli  systemd_stubs.c
oxenstored/systemd/include/: xen-sd-notify.h
oxenstored/testing_status/: dune  testing_status.ml
tests/: dune  eventchn.ml  gnt.ml  plugin_interface_v1.ml  testing_status.ml  unit_tests.ml  unix_activations_minimal.ml  xenctrl.ml  xeneventchn.ml  xenstored_test.ml
xenbus/: dune  op.ml  op.mli  packet.ml  packet.mli  partial.ml  partial.mli  xb.ml  xb.mli  xenbus_stubs.c  xs_ring.ml  xs_ring_stubs.c
xenmanage/: dune  dune-project  xenmanage.ml  xenmanage.mli  xenmanage.opam  xenmanage_stubs.c
xsd_glue/: dune  plugin_interface_v1.ml  plugin_interface_v1.mli
xsd_glue/domain_getinfo_plugin_v1/: domain_getinfo_plugin_v1.opam  domain_getinfo_stubs_v1.c  domain_getinfo_v1.ml  dune  dune-project
