(executable
 (modes native)
 (name xenstored)
 (modules
  (:standard \ syslog))
 (flags
  (:standard -w -52))
 (libraries unix xenbus xen-evtchn xen-evtchn-unix
            xengnt xenmmap syslog xsdglue
            dune-site dune-site.plugins))

(generate_sites_module
(module sites)
(plugins (oxenstored plugins)))

(install
 (package oxenstored)
 (section sbin)
 (files
  (xenstored.exe as oxenstored)))

(library
 (foreign_stubs (language c) (names syslog_stubs select_stubs))
 (modules syslog)
 (name syslog)
 (wrapped false)
 (libraries unix)
 (no_dynlink))
